[package]
name = "space"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.3"
bevy_third_person_camera = "0.2.0"
# bevy_observed_utility = "0.2.0"
bevy-inspector-egui = "0.30"
big-brain = "0.22.0"

rand = "0.8.5"
avian3d = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Force-enable objc2's relax-sign-encoding to fix macOS 26 crash in winit/objc2-foundation
objc2 = { version = "0.5.2", features = ["relax-sign-encoding"] }
objc2-foundation = "0.2.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

